corpus/declaration.txt
==================
Simple
==================

name = end

---

(program
    (proc_declaration (name)
        (end)))

==================
Empty
==================

---

(program)


==================
Multiple
==================

name = end
name = end

---

(program
    (proc_declaration (name)
        (end))
    (proc_declaration (name)
        (end)))
