corpus/nu.txt
==================
Simple
==================

name = (nu x) end

---

(program
    (proc_declaration (name)
        (nu (name)
            (end)
        )))

==================
Parenthesized - 1
==================

name = (nu x) (end)

---

(program
    (proc_declaration (name)
        (nu (name)
            (end)
        )))

==================
Parenthesized - 2
==================

name = ((nu x) (end))

---

(program
    (proc_declaration (name)
        (nu (name)
            (end))))

==================
Call
==================

name = ((nu x) name)

---

(program
    (proc_declaration (name)
        (nu (name)
            (call (name)))))
